--- a/index.html
+++ b/index.html
@@ -2,9 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/Weather.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Primary Meta Tags -->
+    <title>Weather App - The world's weather information daily, forecast, and next days.</title>
+    <meta name="title" content="Weather App - The world's weather information daily, forecast, and next days.">
+    <meta name="description" content="The world's weather information daily, forecast, and next days.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://the-current-weather-app.netlify.app/">
+    <meta property="og:title" content="Weather App - The world's weather information daily, forecast, and next days.">
+    <meta property="og:description" content="The world's weather information daily, forecast, and next days.">
+    <meta property="og:image" content="https://res.cloudinary.com/images-alex-projects/image/upload/v1623007282/Portfolio/weather-app-images/Weather-App-Cover_ppc8ws.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://the-current-weather-app.netlify.app/">
+    <meta property="twitter:title" content="Weather App - The world's weather information daily, forecast, and next days.">
+    <meta property="twitter:description" content="The world's weather information daily, forecast, and next days.">
+    <meta property="twitter:image" content="https://res.cloudinary.com/images-alex-projects/image/upload/v1623007282/Portfolio/weather-app-images/Weather-App-Cover_ppc8ws.png">
   </head>
   <body>
     <div id="root"></div>
